# crate-digger

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  authorize_spotipy.py  config.toml  pyproject.toml
.github/workflows/: ci.yml  fetch_releases.yml  oidc_test.yml  test_scheduling_fri.yml  test_scheduling_fri_w.yml  test_scheduling_thu_w.yml  test_scheduling_wed.yml  test_scheduling_wed_w.yml
infra/: main.tf  provider.tf
src/crate_digger/: constants.py
src/crate_digger/main/: backfill_label_history.py  fetch_new_releases.py  sync_mp3_tags_by_filename_fix.py
src/crate_digger/utils/: config.py  logging.py  markdownv2.py  spotify.py  telegram.py  types.py
tests/: test_auth.py  test_config.py  test_integration_spotify.py  test_spotify.py  test_telegram.py  test_track_utils.py
