[project]
name = "crate-digger"
version = "1.0.0"
description = ""
authors = [{ name = "Radosław Winiecki", email = "r.winiecki@outlook.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "spotipy (>=2.25.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "jupyter>=1.1.1,<2",
    "pandas>=2.3.1,<3",
    "ruff>=0.14.10",
]
